swagger,black, handle error
